Release 0.4.4
- Add PDF::Class::Defs. Fix annot detection in PDF::Field
- Add script pdf-fields.raku

Release 0.4.3
- [PDF::Field]
  -- fix .fields() and .fields-hash() methods to return only terminal fields
  -- .value() method now returns .V // .DV (value or default-value)
- Provide top level fields() and field-hash(); (similar to FDF)
- Enable update of name-trees (via .name-tree()) and number-trees
  (via .number-tree()). Added calls to .cb-finish() which now must
  be called to publish the updates.
- Also support name/number-tree vivication
- Add PDF::Class.creator() method - editable list of creators. Also
  seperate creators with '; ' when writing to PDF::Info.Creator; seems
  to be the convention.

Release 0.4.2
- Improved checking of name and number trees (pdf-checker.raku)
- Fixes to .calculator() method in PDF::Function::Stitching
  and PDF::Function::Postscript

Release 0.4.1
- Add role PDF::Class::StructItem
- Fix t/pdf-xobject-form.t to pass against PDF::Content v0.4.1

Release 0.4.0
- Rename modules *.pm -> *.rakumod and scripts *.p6 -> *.raku
- Add annotation classes: Highlight, Underline, Squiggly, StrikeOut

Release 0.3.9
- Rename PDF::StructElem.structure-type() alias to .tag()
- Minor refactor of destination coercements. Add PDF::Names; extracted from PDF::Catalog.
- Added classes PDF::Sound PDF::Action::Sound

Release 0.3.8
- Add Catalog Permissions and PDF::Signature::Reference roles
- More forgiving PDF::ExtGState and PDF::Annot.Border[3] (dash entry)
- Make PDF::FontDescriptor into a role; missing /Type is quite common, e.g. in
  older Ghostscript PDF files.

Release 0.3.7
- Populate Info /Creator with Perl and tool-chain versions, and /Producer with actual producer class

Release 0.3.6
- Fixed load of PDF::Group::Transparency class
- Adjust META6 source_url (see perl6/ecosystem-unbitrot#492)

Release 0.3.5
- renamed exported class Filespec -> File

Release 0.3.4
- Remove questionable "use lib '.'" from test suite