@@ -15,11 +15,8 @@ class PDF::Action::JavaScript
     use PDF::COS::Tie;
     use PDF::COS::Stream;
     use PDF::COS::TextString;
+    use PDF::Class::Defs :TextOrStream;
 
-    my subset JavaScript where PDF::COS::TextString | PDF::COS::Stream;
-    multi sub coerce(Str $value is rw, JavaScript) {
-	$value = PDF::COS.coerce( $value, PDF::COS::TextString );
-    }
-    has JavaScript $.JS is entry(:required, :&coerce, :alias<java-script>); # (Required) A text string or text stream containing the JavaScript script to be executed. PDFDocEncoding or Unicode encoding (the latter identified by the Unicode prefix U+ FEFF) shall be used to encode the contents of thestring or stream.
+    has TextOrStream $.JS is entry(:required, :coerce(&coerce-text-or-stream), :alias<java-script>); # (Required) A text string or text stream containing the JavaScript script to be executed. PDFDocEncoding or Unicode encoding (the latter identified by the Unicode prefix U+ FEFF) shall be used to encode the contents of thestring or stream.
 
 }
