@@ -1,6 +1,8 @@
 unit module PDF::Class::Defs;
 
 use PDF::COS::Name;
+use PDF::COS::Stream;
+use PDF::COS::TextString;
 
 # See [PDF 32000 Table 169 - Annotation types]
 my subset AnnotName of PDF::COS::Name
@@ -34,3 +36,7 @@ my subset ActionName of PDF::COS::Name
     |'GoTo3DView'  #| (PDF 1.6) Set the current view of a 3D annotation
 ;
 
+my subset TextOrStream is export(:TextOrStream) where PDF::COS::TextString | PDF::COS::Stream;
+multi sub coerce-text-or-stream(Str $value is rw, TextOrStream) is export(:TextOrStream) {
+    $value = PDF::COS.coerce( $value, PDF::COS::TextString );
+}
